--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "./src/app.js",
   "scripts": {
-    "test": "nodemon src/app.js",
-    "start": "node src/index.js"
+    "start": "node src/app.js",
+    "test": "nodemon src/app.js"
+    
   },
-  
+
   "keywords": [],
   "author": "",
   "license": "ISC",
